fix warnings and findbugs hints